<resources>
    <string name="app_name">Ultimate X O</string>
    <string name="game_title">Ultimate Tic Tac Toe</string>
    <string name="game_description">Win three games of Tic Tac Toe in a row!</string>
    <string name="start_game">Start New Game</string>
    <string name="how_to_play">How to Play</string>
    <string name="welcome">Welcome to \n Ultimate Tic Tac Toe!</string>
    <string name="settings">Settings</string>
    <string name="github">GitHub</string>
    <string name="linkedin">LinkedIn</string>
    <string name="instagram">Instagram</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_description">Here are the instructions to play...</string>
    <string name="settings_title">Settings</string>
    <string name="vibration">Vibration  </string>
    <string name="music">Music  </string>
    <string name="sound">Sound  </string>
    <string name="restart_game">Restart Game</string>
    <string name="music_spinner_prompt">Choose Background Music</string>
    <string-array name="music_spinner">
        <item>Music 1</item>
        <item>Music 2</item>
        <item>Music 3</item>
        <item>Music 4</item>
    </string-array>
</resources>
