<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:background="@drawable/mainbg">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        android:fontFamily="@font/blowbrush"

        android:textSize="38sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"/>

    <TextView
        android:id="@+id/gameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_description"
        android:textSize="20sp"
        android:fontFamily="@font/blowbrush"
        android:layout_below="@id/gameTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:layout_below="@id/gameDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_3d"
        android:fontFamily="@font/blowbrush"
        android:textColor="@color/deepRed"
        android:textSize="30sp" />

    <Button
        android:id="@+id/howToPlayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_play"
        android:layout_below="@id/startGameButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_3d"
        android:fontFamily="@font/blowbrush"
        android:textColor="@color/deepRed"
        android:textSize="30sp" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_below="@id/howToPlayButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_3d"
        android:fontFamily="@font/blowbrush"
        android:textColor="@color/deepRed"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="197dp"
        android:layout_height="362dp"
        android:layout_alignParentBottom="true"
        app:srcCompat="@drawable/cats_lamb" />
</RelativeLayout>
