<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@drawable/mainbg2">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/blowbrush"
        android:textColor="#A7D129"
        android:text="@string/settings_title"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"/>

    <LinearLayout
        android:id="@+id/vibrationLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingsTitle"
        android:layout_marginTop="0dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/vibrationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/vibration"
            android:textColor="#A7D129"
            android:textSize="30sp"
            android:fontFamily="@font/blowbrush"/>
        <ImageView
            android:id="@+id/vibrationSwitch"
            android:layout_marginLeft="10dp"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/toggle_on1"
            android:contentDescription="@string/vibration"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/musicLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vibrationLayout"
        android:layout_marginTop="-10dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/musicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/music"
            android:textColor="#A7D129"
            android:textSize="30sp"
            android:fontFamily="@font/blowbrush"/>
        <ImageView
            android:id="@+id/musicSwitch"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/toggle_on2"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/music"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/soundLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/musicLayout"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/soundText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-40dp"
            android:fontFamily="@font/blowbrush"
            android:text="@string/sound"
            android:textColor="#A7D129"
            android:textSize="30sp" />
        <ImageView
            android:id="@+id/soundSwitch"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/toggle_on3"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/sound"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/restartAndMusicLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/soundLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/musicTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/blowbrush"
            android:gravity="left"
            android:text="Choose \n Background \n Music"

            android:textColor="#A7D129"
            android:textSize="30sp" />
        <Button
            android:id="@+id/restartGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:fontFamily="@font/blowbrush"
            android:layout_marginLeft="10dp"
            android:text="@string/restart_game"
            android:textColor="#D9E3C3"
            android:textSize="30sp" />


    </LinearLayout>


    <Spinner
        android:id="@+id/music_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/restartAndMusicLayout"
        android:layout_marginTop="27dp"
        android:background="@drawable/button_rounded"
        android:entries="@array/music_spinner"
        android:fontFamily="@font/blowbrush"
        android:prompt="@string/music_spinner_prompt"
        android:textColor="#A7D129"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/copyrightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:text="© 2024 Ultimate X O. All rights reserved."
        android:textColor="#D9E3C3"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/socialIconsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/copyrightText"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/githubIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/github"
            android:contentDescription="@string/github"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true" />

        <ImageView
            android:id="@+id/linkedinIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/linkedin"
            android:contentDescription="@string/linkedin"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true" />

        <ImageView
            android:id="@+id/instagramIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/instagram"
            android:contentDescription="@string/instagram"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>


</RelativeLayout>
